# plugins

./: CMakeLists.txt
.github/workflows/: build-plugins.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
